Update README.md
MAKE SURE TO READ THIS message