@@ -1,7 +1,7 @@
 # Pdf-Editor-app-for-mac
 This is a fully functional pdf editor for mac. The bundle will be included or if you want the code that will also be included.
 
-Bundle link to google drive for download:
+**Bundle link to google drive for download for full completed app:**
 https://drive.google.com/file/d/1hQN0ZngRa_uk5tp0a_SMIAnivumeEsvf/view?usp=sharing
 - Requirements: you must have the newest version of Java to run
 - After downloading the program it will say it is by an unitentified dev. I did not add a signature to the code. Just press the ignore buttons or run anyway.
@@ -9,3 +9,8 @@ https://drive.google.com/file/d/1hQN0ZngRa_uk5tp0a_SMIAnivumeEsvf/view?usp=shari
 ******************************************************************************************************************************
 DO NOT CLAIM THIS AS YOUR OWN PROJECT/COPY. DO NOT USE FOR COMERCIAL USE. THIS IS ONLY USED FOR EDUCATIONAL PURPOSES ONLY.
 ******************************************************************************************************************************
+
+**For eclipse project: instructions:**
+- YOU MUST INCLUDE ALL OF THE JAR FILES AS LIBRARIES BEFORE RUNNING
+- in VM Parameters/arguements include this --module-path /PathToJavafxLibraries/JavaFxVersions/javafx-sdk-17.0.7/lib --add-modules javafx.controls,javafx.fxml
+          (change the path name, and turn off "Use the -XstartOnfirstThread arguement when launching with SWT" for eclipse)
